added homepage, lecture, readings

--- a/assignment/1.html
+++ b/assignment/1.html
@@ -36,23 +36,23 @@
     <div class="main-container">
       <div id="sub-nav">
         <ul>
-          <li>#1 Lost & Found</li>
-          <li>#2 Divination Machine</li>
-          <li>#3 Experimental Clock</li>
-          <li>#4 Exquisite Corpse</li>
-          <li>#5 Anti-Surveillance Tool</li>
-          <li>#6 Experimental Camera</li>
-          <li>#7 Bitmap Game</li>
-          <li>#8 Consenful Interface</li>
-          <li>#9 Data Portrait</li>
-          <li>#10 Translation Device</li>
+          <li><a href="1.html">#1 Lost & Found</a></li>
+          <li><a href="2.html">#2 Divination Machine</a></li>
+          <li><a href="3.html">#3 Experimental Clock</a></li>
+          <li><a href="4.html">#4 Exquisite Corpse</a></li>
+          <li><a href="5.html">#5 Anti-Surveillance Tool</a></li>
+          <li><a href="6.html">#6 Experimental Camera</a></li>
+          <li><a href="7.html">#7 Bitmap Game</a></li>
+          <li><a href="8.html">#8 Consenful Interface</a></li>
+          <li><a href="9.html">#9 Data Portrait</a></li>
+          <li><a href="10.html">#10 Translation Device</a></li>
         </ul>
       </div>
       <div id="main-panel">
         <h1>
           Lost & Found
         </h1>
-
+        
         <h1>
           Objective
         </h1>
@@ -129,23 +129,17 @@
         </h2>
         <ol>
           <li>
-            Choose an image (or photo) that has meaning to you. Keep the actual
-            image you have chosen to yourself. You will reveal it to your
-            partner later. (Be sure to select an image that you feel comfortable
-            sharing. The image should have personal meaning, but if you wish to
-            keep it private, it’s best to select another image.)
+            Choose an object you have lost in the past that has meaning to you.
           </li>
           <li>
-            Describe this image using plain language. It is up to you how much
+            Describe the object using plain language. It is up to you how much
             detail you impart, but be mindful of your own assumptions about what
-            your partner might know about people or places depicted in the
-            image.
+            your partner might know about the object.
           </li>
           <li>
             Be prepared to share your written description in CC Lab on 9/3,
-            where you will be paired with a partner. Be ready to discuss the
-            work you are doing, along with any questions you may have about the
-            next part of the assignment.
+            where you will be paired with a partner. Be ready to discuss any
+            questions you may have about the next part of the assignment.
           </li>
         </ol>
 
@@ -155,8 +149,8 @@
 
         <ol>
           <li>
-            Share your description (but not the actual image) with your assigned
-            partner.
+            Share your description (without any reference images) with your
+            assigned partner.
           </li>
           <li>
             After exchanging descriptions begin drawing that image on a piece of
@@ -173,18 +167,11 @@
             Be sure to include the following information at the top of your
             sketch.js:
             <ul>
+              <li class="bullet">Your p5 sketch (embedded iframe)</li>
               <li class="bullet">Your name</li>
-              <li class="bullet">The course name (CC Lecture) and faculty</li>
-              <li class="bullet">
-                Your CC Lab section, the name of your Lab Instructor
-              </li>
-              <li class="bullet">The image description you received</li>
               <li class="bullet">Your partner’s name</li>
-              <li class="bullet">The image you created & your code</li>
-              <li class="bullet">
-                The image you chose for your partner and why you chose it
-              </li>
-              <li class="bullet">Your project reflections</li>
+              <li class="bullet">The object description you received</li>
+              <li class="bullet">Your assignment reflections</li>
             </ul>
           </li>
 
@@ -216,48 +203,63 @@
         </ol>
 
         <h1>
-          Study Guide
+          Tutorials
         </h1>
-
-        <h2>
-          Web Editor & the Console
-        </h2>
-        <iframe
-          width="560"
-          height="315"
-          src="https://www.youtube.com/embed/wiG7wLwyW0E"
-          frameborder="0"
-          allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-          allowfullscreen
-        ></iframe>
-
-        <h2>
-          2D Primitives
-        </h2>
-
-        <h2>
-          fill() and blendMode()
-        </h2>
-
-        <h2>
-          Translate(), Rotate(), Push(), Pop()
-        </h2>
-
-        <h2>
-          Embed p5 Sketch on Glitch
-        </h2>
-
-        <iframe
-          width="560"
-          height="315"
-          src="https://www.youtube.com/embed/FkGnZTu51PQ"
-          frameborder="0"
-          allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-          allowfullscreen
-        ></iframe>
-        <p>
-          Thanks aarati for contributing the tutorial!
-        </p>
+        <ul>
+          <li>
+            1.1 p5 Web Editor and the Console (<a
+              href="https://youtu.be/wiG7wLwyW0E"
+              target="blank"
+              >YouTube</a
+            >
+            /
+            <a
+              href="https://diode.zone/videos/watch/ce6aa5ed-7170-4b07-84db-5fa10199a55d"
+              target="blank"
+              >PeerTube</a
+            >)
+          </li>
+          <li>
+            1.2 2D Primitives (<a
+              href="https://youtu.be/hISICBkFa4Q"
+              target="blank"
+              >YouTube</a
+            >)
+          </li>
+          <li>
+            1.3 RGB Colors and blendMode() (<a
+              href="https://www.youtube.com/watch?v=fTEvHLLwSBE&feature=youtu.be"
+              target="blank"
+              >YouTube</a
+            >
+            /
+            <a
+              href="https://diode.zone/videos/watch/bf6a2187-93aa-494f-86a7-5834a20b4d47"
+              target="blank"
+              >PeerTube</a
+            >)
+          </li>
+          <li>
+            1.4 translate(), rotate(), push(), pop() (<a
+              href="https://www.youtube.com/watch?v=maTfm84mLbo&feature=youtu.be"
+              target="blank"
+              >YouTube</a
+            >
+            /
+            <a
+              href="https://diode.zone/videos/watch/37b25b2f-f067-4514-af58-f9087d7d9e34"
+              target="blank"
+              >PeerTube</a
+            >)
+          </li>
+          <li>
+            Embed p5 Sketch on Glitch (<a
+              href="https://www.youtube.com/watch?v=FkGnZTu51PQ&feature=youtu.be"
+              target="blank"
+              >YouTube</a
+            >) by aarati akkapeddi 💚
+          </li>
+        </ul>
       </div>
     </div>
   </body>
