--- a/assignment/index.html
+++ b/assignment/index.html
@@ -40,20 +40,20 @@
     <div class="main-container">
       <div id="sub-nav">
         <ul>
-          <li><a href="../assignment/1.html">#1 Lost & Found</a></li>
-          <li>#2 Divination Machine</li>
-          <li>#3 Experimental Clock</li>
-          <li>#4 Exquisite Corpse</li>
-          <li>#5 Anti-Surveillance Tool</li>
-          <li>#6 Experimental Camera</li>
-          <li>#7 Bitmap Game</li>
-          <li>#8 Consenful Interface</li>
-          <li>#9 Data Portrait</li>
-          <li>#10 Translation Device</li>
+          <li><a href="1.html">#1 Lost & Found</a></li>
+          <li><a href="2.html">#2 Divination Machine</a></li>
+          <li><a href="3.html">#3 Experimental Clock</a></li>
+          <li><a href="4.html">#4 Exquisite Corpse</a></li>
+          <li><a href="5.html">#5 Anti-Surveillance Tool</a></li>
+          <li><a href="6.html">#6 Experimental Camera</a></li>
+          <li><a href="7.html">#7 Bitmap Game</a></li>
+          <li><a href="8.html">#8 Consenful Interface</a></li>
+          <li><a href="9.html">#9 Data Portrait</a></li>
+          <li><a href="10.html">#10 Translation Device</a></li>
         </ul>
       </div>
       <div id="main-panel">
-        + an image or a quote relating to creative process
+ 
       </div>
     </div>
   </body>
