--- a/people/index.html
+++ b/people/index.html
@@ -38,8 +38,8 @@
           <li><a href="#section0">Callery-Pear</a></li>
           <li><a href="#section1">Honeylocust</a></li>
           <li><a href="#section2">Little Leaf</a></li>
-          <li><a href="#section3">section 4</a></li>
-          <li><a href="#section4">section 5</a></li>
+          <li><a href="#section3">Sycamore</a></li>
+          <li><a href="#section4">Ginkgo</a></li>
         </ul>
       </div>
       <div id="main-panel">
@@ -48,7 +48,7 @@
             Callery-Pear
           </h1>
         </div>
-        <ul class="bullet">
+        <ul class="bullet people">
           <li><a href="addPortfolioLink">Student Name, Pronouns</a></li>
           <li><a href="addPortfolioLink">Student Name, Pronouns</a></li>
           <li><a href="addPortfolioLink">Student Name, Pronouns</a></li>
@@ -59,7 +59,7 @@
             Honeylocust
           </h1>
         </div>
-        <ul class="bullet">
+        <ul class="bullet people">
           <li><a href="addPortfolioLink">Student Name, Pronouns</a></li>
           <li><a href="addPortfolioLink">Student Name, Pronouns</a></li>
           <li><a href="addPortfolioLink">Student Name, Pronouns</a></li>
@@ -70,7 +70,7 @@
             Little Leaf
           </h1>
         </div>
-        <ul class="bullet">
+        <ul class="bullet people">
           <li><a href="addPortfolioLink">Student Name, Pronouns</a></li>
           <li><a href="addPortfolioLink">Student Name, Pronouns</a></li>
           <li><a href="addPortfolioLink">Student Name, Pronouns</a></li>
@@ -78,10 +78,10 @@
 
         <div class="block" id="section3">
           <h1>
-            Section 4
+            Sycamore
           </h1>
         </div>
-        <ul class="bullet">
+        <ul class="bullet people">
           <li><a href="addPortfolioLink">Student Name, Pronouns</a></li>
           <li><a href="addPortfolioLink">Student Name, Pronouns</a></li>
           <li><a href="addPortfolioLink">Student Name, Pronouns</a></li>
@@ -89,10 +89,10 @@
 
         <div class="block" id="section4">
           <h1>
-            Section 5
+            Ginkgo
           </h1>
         </div>
-        <ul class="bullet">
+        <ul class="bullet people">
           <li><a href="addPortfolioLink">Student Name, Pronouns</a></li>
           <li><a href="addPortfolioLink">Student Name, Pronouns</a></li>
           <li><a href="addPortfolioLink">Student Name, Pronouns</a></li>
