--- a/resource/tutorials.html
+++ b/resource/tutorials.html
@@ -45,18 +45,219 @@
         <h1>
           CC Tutorials
         </h1>
-        <ul class="bullet">
+        <ul>
           <h2>
             Wk 1
           </h2>
-                   <li>
-            1.1 p5 Web Editor and the Console (<a href ="https://youtu.be/wiG7wLwyW0E" target="blank">YouTube</a> / <a href ="https://diode.zone/videos/watch/ce6aa5ed-7170-4b07-84db-5fa10199a55d" target="blank">PeerTube</a>)
-          </li>
-          
           <li>
-            Embed p5 Sketch on Glitch by aarati akkapeddi (<a href ="https://www.youtube.com/watch?v=FkGnZTu51PQ&feature=youtu.be" target="blank">YouTube</a>)
+            1.1 p5 Web Editor and the Console (<a
+              href="https://youtu.be/wiG7wLwyW0E"
+              target="_blank"
+              >YouTube</a
+            >
+            /
+            <a
+              href="https://diode.zone/videos/watch/ce6aa5ed-7170-4b07-84db-5fa10199a55d"
+              target="_blank"
+              >PeerTube</a
+            >), Xin Xin
           </li>
-          
+          <li>
+            1.2 2D Primitives (<a
+              href="https://youtu.be/hISICBkFa4Q"
+              target="_blank"
+              >YouTube</a
+            >
+            /
+            <a
+              href="https://diode.zone/videos/watch/f791e49d-3be6-47b8-bad6-27aacadce78c"
+              target="_blank"
+            >Peer Tube</a
+            >), Xin Xin
+          </li>
+          <li>
+            1.3 RGB Colors and blendMode() (<a
+              href="https://www.youtube.com/watch?v=fTEvHLLwSBE&feature=youtu.be"
+              target="_blank"
+              >YouTube</a
+            >
+            /
+            <a
+              href="https://diode.zone/videos/watch/bf6a2187-93aa-494f-86a7-5834a20b4d47"
+              target="_blank"
+              >PeerTube</a
+            >), Xin Xin
+          </li>
+          <li>
+            1.4 translate(), rotate(), push(), pop() (<a
+              href="https://www.youtube.com/watch?v=maTfm84mLbo&feature=youtu.be"
+              target="_blank"
+              >YouTube</a
+            >
+            /
+            <a
+              href="https://diode.zone/videos/watch/37b25b2f-f067-4514-af58-f9087d7d9e34"
+              target="_blank"
+              >PeerTube</a
+            >), Xin Xin
+          </li>
+          <li>
+            Embed p5 Sketch on Glitch (<a
+              href="https://www.youtube.com/watch?v=FkGnZTu51PQ&feature=youtu.be"
+              target="_blank"
+              >YouTube</a
+            >), aarati akkapeddi
+          </li>
+        </ul>
+
+        <h1>
+          External p5 Tutorials
+        </h1>
+        <ul>
+          <h2>
+            General
+          </h2>
+          <li>
+            <a
+              href="https://www.youtube.com/playlist?list=PLRqwX-V7Uu6Zy51Q-x9tMWIv9cueOFTFA"
+              >Coding Train</a
+            >, Dan Shiffman
+          </li>
+          <li>
+            <a
+              href="https://www.youtube.com/playlist?list=PLuLgmkp7OJgFhpFaQt4LGZBOoK_sjPbxj"
+              >AriCiano</a
+            >, Ari Melenciano
+          </li>
+          <li>
+            <a
+              href="https://www.youtube.com/channel/UCzMs9qg50AW2LEpLDzHT5NA/videos"
+              >Qtv</a
+            >, Qianqian Ye &mdash; p5 tutorials in Mandarin
+          </li>
+
+          <h2>Color</h2>
+          <li>
+            <a
+              href="https://medium.com/@kellylougheed/rainbow-paintbrush-in-p5-js-e452d5540b25"
+              >Rainbow Paintbrush in p5.js</a
+            >, Kelly Lougheed &mdash; practical example on using
+            <a href="https://p5js.org/reference/#/p5/colorMode"
+              >colorMode() HSL</a
+            >
+          </li>
+          <h2>Trigonometry</h2>
+          <li>
+            <a href="https://natureofcode.com/book/chapter-3-oscillation/"
+              >The Nature of Code: Oscillation</a
+            >, Dan Shiffman
+          </li>
+          <h2>Text Processing</h2>
+          <li>
+            <a href="https://creative-coding.decontextualize.com/text-and-type/"
+              >Text and Type</a
+            >, Allison Parrish
+          </li>
+          <li>
+            <a
+              href="https://creative-coding.decontextualize.com/intro-to-ritajs/"
+              >Introduction to RiTaJS</a
+            >, Allison Parrish
+          </li>
+          <h2>Image Processing</h2>
+          <li>
+            <a
+              href="https://codeburst.io/instagram-filters-with-javascript-p5-js-83f28c9f7fda"
+              >Instagram Filters with p5.js</a
+            >, Kelly Lougheed
+          </li>
+          <li>
+            <a
+              href="https://cdn.glitch.com/5dd99b18-3ebb-45c5-90fb-b4b67dc2e128%2FGenerative_Design_Revised_Visualize%2C_Program%2C_and_..._----_(Pg_188--225).pdf?v=1583955406388"
+              >Generative Design: Image (excerpt)</a
+            >, accomodated by
+            <a href="http://www.generative-gestaltung.de/2/#sketches"
+              >p5 examples</a
+            >, Benedikt Gross, Julia Laub, Claudius Lazzeroni, Hartmut Bohnacker
+          </li>
+          <li>
+            <a href="https://www.ksawerykomputery.pl/tools/pixelator#story"
+              >p5.Pixelator.js</a
+            >, Ksawery Kirklewski
+          </li>
+          <h2>p5 Libraries</h2>
+          <li>
+            <a
+              href="https://medium.com/@yyyyyyyuan/tutorial-serial-communication-with-arduino-and-p5-js-cd39b3ac10ce"
+              >Serial Communication with Arduino and p5.js</a
+            >, Irene Ye Yuan
+          </li>
+
+          <h2>
+            JavaScript
+          </h2>
+
+          <li>
+            <a href="https://github.com/processing/p5.js/wiki/JavaScript-basics"
+              >JavaScript Basics</a
+            >, Lauren McCarthy
+          </li>
+
+          <h2>
+            DOM
+          </h2>
+
+          <li>
+            <a href="https://github.com/processing/p5.js/wiki/Beyond-the-canvas"
+              >Beyond the Canvas</a
+            >, Evelyn Masso
+          </li>
+
+          <h2>
+            Video and Pixels
+          </h2>
+          <li>
+            <a
+              href="https://www.youtube.com/watch?v=0V3uYA1hafk&list=PLRqwX-V7Uu6aKKsDHZdDvN6oCJ2hRY_Ig&index=6"
+              >Video and Pixels Playlist</a
+            >, Coding Train
+          </li>
+        </ul>
+
+        <h1>
+          Miscellaneous
+        </h1>
+        <ul>
+          <li>
+            <a
+              href="https://cdn.glitch.com/5dd99b18-3ebb-45c5-90fb-b4b67dc2e128%2Fp5cheatsheet.pdf?v=1579724115054"
+              >p5 Cheat Sheet</a
+            >, Ben Moren
+          </li>
+          <li>
+            <a
+              href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference"
+              >JavaScript Reference</a
+            >, Mozilla Foundation
+          </li>
+          <!--         <li>
+          <a href="p5cheat.html">p5 Advanced Cheat Sheet</a>, Xin Xin
+        </li>
+         <li>
+          <a href="stringCheat.html">JavaScript String Cheat Sheet</a>, Xin Xin
+        </li>
+         <li>
+          <a
+            href="https://cdn.glitch.com/5dd99b18-3ebb-45c5-90fb-b4b67dc2e128%2FCode-1-clock-assignment.pdf?v=1579725453799"
+            >p5 Hours - Degrees - Radians Diagram</a
+          >, Xin Xin
+        </li>
+       <li>
+          <a
+            href="https://cdn.glitch.com/5dd99b18-3ebb-45c5-90fb-b4b67dc2e128%2FCode2_storyboardTemplate.pdf?v=1579761035887"
+            >p5 Storyboard Template</a
+          >, Xin Xin
+        </li> -->
         </ul>
       </div>
     </div>
