--- a/syllabus/index.html
+++ b/syllabus/index.html
@@ -44,9 +44,10 @@
           <li><a href="#section3">Community Agreement</a></li>
           <li><a href="#section4">Land Acknowledgement</a></li>
           <li><a href="#section5">Assessable Assignments</a></li>
-          <li><a href="#section6">Assignment Rubric</a></li>
           <li><a href="#section7">Assignment Submissions </a></li>
+          <li><a href="#section7.1">CC Lecture Final Grade Calculation</a></li>
           <li><a href="#section8">CC Lab Final Grade Calculation</a></li>
+          <li><a href="#section6">Assignment Rubric</a></li>
           <li><a href="#section9">Communication Channels</a></li>
           <li><a href="#section10">Asking Questions</a></li>
           <li><a href="#section11">Required Tools</a></li>
@@ -143,14 +144,16 @@
           </div>
           <div class="assignment-grid-item"></div>
 
-          <div class="assignment-grid-item">Bolor Amgalan</div>
+          <div class="assignment-grid-item">Bolor Amgalan (she/her)</div>
           <div class="assignment-grid-item">
             amgab699[at]newschool[dot]edu
           </div>
           <div class="assignment-grid-item">
-            <a href="">Zoom Link</a>
+            <a href="https://NewSchool.zoom.us/j/96604778857">Zoom Link</a> pw:
+            901560
           </div>
-
+          
+          <hr class="divider-mobile">
           <div class="assignment-grid-item">Lan Zhang (she/her)</div>
           <div class="assignment-grid-item">
             zhany016[at]newschool[dot]edu
@@ -162,20 +165,24 @@
             >
             pw: mfadt
           </div>
-
+          <hr class="divider-mobile">
           <div class="assignment-grid-item">Elena Gold (they/them)</div>
           <div class="assignment-grid-item">
             golde584[at]newschool[dot]edu
           </div>
           <div class="assignment-grid-item">
-            <a href="">Zoom Link</a>
+            <a
+              href="https://NewSchool.zoom.us/j/92734126354?pwd=M1pVVjlybHMvV0xjb1I4TThFYXRuQT09"
+              >Zoom Link</a
+            >
+            pw: 111433
           </div>
-
+          
           <div class="assignment-grid-item">Jon Packles (he/him/his)</div>
           <div class="assignment-grid-item">
             jon.packles[at]newschool[dot]edu
           </div>
-          <div class="assignment-grid-item"></div>
+          <br>
           <div class="assignment-grid-item"><b>Synchronous Meetings</b></div>
           <div class="assignment-grid-item">
             <b>Thursdays 8-10:00PM (EST)</b>
@@ -197,7 +204,8 @@
             akkaa949[at]newschool[dot]edu
           </div>
           <div class="assignment-grid-item"></div>
-          <div class="assignment-grid-item">Cassandra Hradil</div>
+          <hr class="divider-mobile">
+          <div class="assignment-grid-item">Cassandra Hradil (she/her)</div>
           <div class="assignment-grid-item">
             hradc987[at]newschool[dot]edu
           </div>
@@ -395,37 +403,133 @@
           <div class="assignment-grid-item">Assignment #1</div>
           <div class="assignment-grid-item">Lost and Found</div>
           <div class="assignment-grid-item">DUE 9/8</div>
+          <hr class="divider-mobile">
           <div class="assignment-grid-item">Assignment #2</div>
           <div class="assignment-grid-item">Divination Machine</div>
           <div class="assignment-grid-item">DUE 9/15</div>
+          <hr class="divider-mobile">
           <div class="assignment-grid-item">Assignment #3</div>
           <div class="assignment-grid-item">Experimental Clock</div>
           <div class="assignment-grid-item">DUE 9/22</div>
+          <hr class="divider-mobile">
           <div class="assignment-grid-item">Assignment #4</div>
           <div class="assignment-grid-item">Exquisite Corpse</div>
           <div class="assignment-grid-item">DUE 9/29</div>
+          <hr class="divider-mobile">
           <div class="assignment-grid-item">Assignment #5</div>
           <div class="assignment-grid-item">Anti-Surveillance Tool</div>
           <div class="assignment-grid-item">DUE 10/6</div>
+          <hr class="divider-mobile">
           <div class="assignment-grid-item">Assignment #6</div>
           <div class="assignment-grid-item">Experimental Camera</div>
           <div class="assignment-grid-item">DUE 10/13</div>
+          <hr class="divider-mobile">
           <div class="assignment-grid-item">Assignment #7</div>
           <div class="assignment-grid-item">Bitmap Game</div>
           <div class="assignment-grid-item">DUE 11/10</div>
+          <hr class="divider-mobile">
           <div class="assignment-grid-item">Assignment #8</div>
           <div class="assignment-grid-item">Consentful Interface</div>
           <div class="assignment-grid-item">DUE 11/17</div>
+          <hr class="divider-mobile">
           <div class="assignment-grid-item">Assignment #9</div>
           <div class="assignment-grid-item">Data Portrait</div>
           <div class="assignment-grid-item">DUE 12/1</div>
+          <hr class="divider-mobile">
           <div class="assignment-grid-item">Assignment #10</div>
           <div class="assignment-grid-item">Translation Device</div>
           <div class="assignment-grid-item">DUE 12/15</div>
+          <hr class="divider-mobile">
           <div class="assignment-grid-item">Final Review</div>
           <div class="assignment-grid-item">CC Portfolio</div>
           <div class="assignment-grid-item">DUE 12/18</div>
         </div>
+
+        <div class="block" id="section7">
+          <h1>
+            Assignment Submissions
+          </h1>
+        </div>
+
+        <div class="block">
+          <h2>
+            CC Portfolio
+          </h2>
+        </div>
+
+        <p>
+          You will use this
+          <a href="https://glitch.com/~code-portfolio-template"
+            >Glitch template</a
+          >
+          as a starting point to build your CC portfolio. Focus on populating
+          the web pages with thoughtful written descriptions and design
+          documentations. Towards the end of the semester you will learn the
+          HTML / CSS skills required to further customize the website.
+        </p>
+        <div class="block">
+          <h2>
+            Canvas
+          </h2>
+        </div>
+        <p>
+          Grades and attendance will be recorded on Canvas.
+        </p>
+
+        <div class="block" id="section7.1">
+          <h1>
+            CC Lecture Final Grade Calculation
+          </h1>
+        </div>
+
+        <div class="assignment-grid-container">
+          <div class="assignment-grid-item">Attendance / 1-1 Meetings</div>
+          <div class="assignment-grid-item">50%</div>
+          <div class="assignment-grid-item"></div>
+          <div class="assignment-grid-item">Reading Responses</div>
+          <div class="assignment-grid-item">15%</div>
+          <div class="assignment-grid-item"></div>
+          <div class="assignment-grid-item">Assignment #1~6</div>
+          <div class="assignment-grid-item">15%</div>
+          <div class="assignment-grid-item"></div>
+          <div class="assignment-grid-item">Assignment #7</div>
+          <div class="assignment-grid-item">10%</div>
+          <div class="assignment-grid-item"></div>
+          <div class="assignment-grid-item">Assignment #8~10</div>
+          <div class="assignment-grid-item">10%</div>
+          <div class="assignment-grid-item"></div>
+        </div>
+
+        <div class="block" id="section8">
+          <h1>
+            CC Lab Final Grade Calculation
+          </h1>
+        </div>
+
+        <div class="assignment-grid-container">
+          <div class="assignment-grid-item">Participation / Attendance</div>
+          <div class="assignment-grid-item">15%</div>
+          <div class="assignment-grid-item"></div>
+          <div class="assignment-grid-item">Reading Responses</div>
+          <div class="assignment-grid-item">15%</div>
+          <div class="assignment-grid-item"></div>
+          <div class="assignment-grid-item">Assignment #1~6</div>
+          <div class="assignment-grid-item">30%</div>
+          <div class="assignment-grid-item"></div>
+          <div class="assignment-grid-item">Assignment #7</div>
+          <div class="assignment-grid-item">20%</div>
+          <div class="assignment-grid-item"></div>
+          <div class="assignment-grid-item">Assignment #8~10</div>
+          <div class="assignment-grid-item">20%</div>
+          <div class="assignment-grid-item"></div>
+        </div>
+
+        <p>
+          Assignments #1~10 will be graded within two weeks after the
+          submission. After receiving the initial grade, you have a second
+          opportunity to improve and re-submit them before the last day of
+          class.
+        </p>
 
         <div class="block" id="section6">
           <h1>
@@ -507,61 +611,6 @@
           </div>
         </div>
 
-        <div class="block" id="section7">
-          <h1>
-            Assignment Submissions
-          </h1>
-        </div>
-
-        <div class="block">
-          <h2>
-            CC Portfolio
-          </h2>
-        </div>
-
-        <p>
-          You will use this
-          <a href="https://glitch.com/~code-portfolio-template"
-            >Glitch template</a
-          >
-          as a starting point to build your CC portfolio. Focus on populating
-          the web pages with thoughtful written descriptions and design
-          documentations. Towards the end of the semester you will learn the
-          HTML / CSS skills required to further customize the website.
-        </p>
-        <div class="block">
-          <h2>
-            Canvas
-          </h2>
-        </div>
-        <p>
-          Grades and attendance will be recorded on Canvas.
-        </p>
-
-        <div class="block" id="section8">
-          <h1>
-            CC Lab Final Grade Calculation
-          </h1>
-        </div>
-
-        <div class="assignment-grid-container">
-          <div class="assignment-grid-item">Participation / Attendance</div>
-          <div class="assignment-grid-item">15%</div>
-          <div class="assignment-grid-item"></div>
-          <div class="assignment-grid-item">Reading Responses</div>
-          <div class="assignment-grid-item">15%</div>
-          <div class="assignment-grid-item"></div>
-          <div class="assignment-grid-item">Assignment #1~6</div>
-          <div class="assignment-grid-item">30%</div>
-          <div class="assignment-grid-item"></div>
-          <div class="assignment-grid-item">Assignment #7</div>
-          <div class="assignment-grid-item">20%</div>
-          <div class="assignment-grid-item"></div>
-          <div class="assignment-grid-item">Assignment #8~10</div>
-          <div class="assignment-grid-item">20%</div>
-          <div class="assignment-grid-item"></div>
-        </div>
-
         <div class="block" id="section9">
           <h1>
             Communication Channels
@@ -577,7 +626,7 @@
           We will use Slack as a space for hosting asynchronous conversations
           and discussions, and it will be our primary method of communication.
           We all live in different time zones and have different schedules, so
-          keep in mind that it’s possible to take up to 24 hours to get a
+          keep in mind that it’s possible to take up to 48 hours to get a
           response from the faculty.
         </p>
         <div class="block">
@@ -638,11 +687,7 @@
         </div>
         <ul>
           <li class="bullet">
-            Reach out to your Lab faculty on
-            <a
-              href="https://join.slack.com/t/critical-computation/shared_invite/zt-g618adue-W7SjaHS~RlQU_RQ2bOeBuA"
-              >Slack</a
-            >
+            Reach out to your Lab faculty on Slack
           </li>
           <li class="bullet">
             Reach out to
@@ -650,22 +695,14 @@
               href="https://www.notion.so/DT-Study-b82362e94b6e4b13817b7748705dc143"
               >DT Study</a
             >
-            on
-            <a
-              href="https://join.slack.com/t/critical-computation/shared_invite/zt-g618adue-W7SjaHS~RlQU_RQ2bOeBuA"
-              >Slack</a
-            >
+            on Slack
             <a
               href="https://critical-computation.slack.com/archives/C016RECJ1TP"
               >#dt-study</a
             >
           </li>
           <li class="bullet">
-            Reach out to your peers on
-            <a
-              href="https://join.slack.com/t/critical-computation/shared_invite/zt-g618adue-W7SjaHS~RlQU_RQ2bOeBuA"
-              >Slack</a
-            >
+            Reach out to your peers on Slack
           </li>
           <li class="bullet">
             Book an appointment with the
