--- a/assignment/9.html
+++ b/assignment/9.html
@@ -32,50 +32,28 @@
       <div><a href="../resource/">resources</a></div>
       <div><a href="../people/">people</a></div>
     </div>
+
     <div class="main-container">
       <div id="sub-nav">
         <ul>
-          <li><a href="lectures.html">Lectures</a></li>
-          <li><a href="tutorials.html">Tutorials</a></li>
-          <li><a href="library.html">Library</a></li>
-          <li><a href="references.html">References</a></li>
+          <li><a href="1.html">#1 Lost & Found</a></li>
+          <li><a href="2.html">#2 Divination Machine</a></li>
+          <li><a href="3.html">#3 Experimental Clock</a></li>
+          <li><a href="4.html">#4 Exquisite Corpse</a></li>
+          <li><a href="5.html">#5 Anti-Surveillance Tool</a></li>
+          <li><a href="6.html">#6 Experimental Camera</a></li>
+          <li><a href="7.html">#7 Bitmap Game</a></li>
+          <li><a href="8.html">#8 Consenful Interface</a></li>
+          <li><a href="9.html">#9 Data Portrait</a></li>
+          <li><a href="10.html">#10 Translation Device</a></li>
         </ul>
       </div>
       <div id="main-panel">
         <h1>
-          CC Lectures
+          Coming Soon
         </h1>
-        <h2>
-          Wk 1
-        </h2>
-        <ul class="bullet">
-          <li>
-            1.1 Is Technology Neutral? (<a
-              href="https://www.youtube.com/watch?v=76Rx2jldGXQ&list=PLhlnwyfMOozUYusIdhgqHBhtq7vUhNDGv"
-              target="blank"
-              >YouTube</a
-            >
-            /
-            <a
-              href="https://diode.zone/videos/watch/4107dd41-cf83-4496-b66c-fd066d4fd73e"
-              target="blank"
-              >PeerTube</a
-            >)
-          </li>
-          <li>
-            1.2 What is Code? Why Code? (<a
-              href="https://youtu.be/Ny1Tu0oqF2k"
-              target="blank"
-              >YouTube</a
-            >
-            /
-            <a
-              href="https://diode.zone/videos/watch/53e5c662-fc68-4be6-a5a0-4f7b7cdbfc54"
-              target="blank"
-              >PeerTube</a
-            >)
-          </li>
-        </ul>
+
+        
       </div>
     </div>
   </body>
