--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
       <div><a href="assignment/">assignments</a></div>
       <div><a href="resource/">resources</a></div>
       <div><a href="people/">people</a></div>
+      <div><a href="faq/">faq</a></div>
     </div>
 
     <div class="main-container">
@@ -46,7 +47,11 @@
               target="_blank"
               >Is Technology Neutral?</a
             >
-            <br /><br />What is Code? Why Code?
+            <br /><br /><a
+              href=" https://www.youtube.com/watch?v=Ny1Tu0oqF2k&feature=youtu.be"
+              target="_blank"
+              >What is Code? Why Code?
+            </a>
           </div>
         </div>
       </div>
