--- a/resource/lectures.html
+++ b/resource/lectures.html
@@ -31,6 +31,7 @@
       <div><a href="../assignment/">assignments</a></div>
       <div><a href="../resource/">resources</a></div>
       <div><a href="../people/">people</a></div>
+                <div><a href="../faq/">faq</a></div>
     </div>
     <div class="main-container">
       <div id="sub-nav">
@@ -51,7 +52,7 @@
         <ul class="bullet">
           <li>
             1.1 Is Technology Neutral? (<a
-              href="https://www.youtube.com/watch?v=76Rx2jldGXQ&list=PLhlnwyfMOozUYusIdhgqHBhtq7vUhNDGv"
+              href="https://youtu.be/en3cfTX0jBw"
               target="blank"
               >YouTube</a
             >
@@ -60,7 +61,7 @@
               href="https://diode.zone/videos/watch/4107dd41-cf83-4496-b66c-fd066d4fd73e"
               target="blank"
               >PeerTube</a
-            >)
+            >), Katherine Moriwaki & Xin Xin
           </li>
           <li>
             1.2 What is Code? Why Code? (<a
@@ -73,7 +74,7 @@
               href="https://diode.zone/videos/watch/53e5c662-fc68-4be6-a5a0-4f7b7cdbfc54"
               target="blank"
               >PeerTube</a
-            >)
+            >), Katherine Moriwaki & Xin Xin
           </li>
         </ul>
       </div>
