--- a/resource/references.html
+++ b/resource/references.html
@@ -34,6 +34,7 @@
       <div><a href="../assignment/">assignments</a></div>
       <div><a href="../resource/">resources</a></div>
       <div><a href="../people/">people</a></div>
+                <div><a href="../faq/">faq</a></div>
     </div>
     <div class="main-container">
       <div id="sub-nav">
