--- a/assignment/2.html
+++ b/assignment/2.html
@@ -43,7 +43,7 @@
           <li><a href="5.html">#5 Anti-Surveillance Tool</a></li>
           <li><a href="6.html">#6 Experimental Camera</a></li>
           <li><a href="7.html">#7 Bitmap Game</a></li>
-          <li><a href="8.html">#8 Consenful Interface</a></li>
+          <li><a href="8.html">#8 Consentful Interface</a></li>
           <li><a href="9.html">#9 Data Portrait</a></li>
           <li><a href="10.html">#10 Translation Device</a></li>
         </ul>
