--- a/resource/index.html
+++ b/resource/index.html
@@ -25,6 +25,7 @@
       <div><a href="../assignment/">assignments</a></div>
             <div><a href="../resource/">resources</a></div>
       <div><a href="../people/">people</a></div>
+                <div><a href="../faq/">faq</a></div>
     </div>
     <div class="main-container">
       <div id="sub-nav">
