--- a/splashscreen.html
+++ b/splashscreen.html
@@ -19,10 +19,10 @@
     />
   </head>
   <body>
-    <div class="blackBox">
+    <div class="blackBox" style="padding: 500px">
       <div class="splash">
-        This Week: <br /><br />
-        Is Technology Neutral? <br /><br />What is Code? Why Code?
+        Critical Computation: <br /><br />
+        Variables, Parameters, Randomness
       </div>
     </div>
   </body>
